fix/dailyrewards minor change in db query
