# docs/swagger.yaml
@@ -478,36 +478,6 @@ paths:
       summary: Updates player info
       tags:
       - Player
-  /users:
-    post:
-      consumes:
-      - application/json
-      description: Perform signup and sends email for verification
-      parameters:
-      - description: Signup Request
-        in: body
-        name: guestLoginRequest
-        required: true
-        schema:
-          $ref: '#/definitions/request.SigupRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Login successful
-          schema:
-            $ref: '#/definitions/response.Success'
-        "400":
-          description: Bad request
-          schema:
-            $ref: '#/definitions/response.Success'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/response.Success'
-      summary: Sign Up
-      tags:
-      - Authentication
   /users/email-verify:
     put:
       consumes:
@@ -559,6 +529,36 @@ paths:
           schema:
             $ref: '#/definitions/response.Success'
       summary: User Login
+      tags:
+      - Authentication
+  /users/sign-up:
+    post:
+      consumes:
+      - application/json
+      description: Perform signup and sends email for verification
+      parameters:
+      - description: Signup Request
+        in: body
+        name: guestLoginRequest
+        required: true
+        schema:
+          $ref: '#/definitions/request.SigupRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Login successful
+          schema:
+            $ref: '#/definitions/response.Success'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/response.Success'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.Success'
+      summary: Sign Up
       tags:
       - Authentication
   /users/sign_out:
